Footer spacing fix

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -143,6 +143,7 @@ img {
 	}
 }
 
+
 // Formatting the footer.
 
 // overall formatting styles for all text in the div.
@@ -159,7 +160,7 @@ img {
 
 // sets the spacing between the rows of unordered lists.
 #bglobeLinks, #bcomLinks, #copyrightStamp {
-	margin-bottom: 15px;
+	margin-bottom: 5px;
 }
 
 // overwriting the snchor tag default setting.
@@ -202,6 +203,7 @@ img {
 		display: block;
 	}
 }
+
 .mobileAd {
 	display: block;
 
